--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,8 @@
 			<div class="container">
 				<div class="company-name">
 					<a href="{{ site.baseurl }}/">
-						<span class="dark-logo"><img width="104" height="38" src="{{ site.baseurl }}/images/logo/dark.svg" alt="dark frisco logo"></span>
-						<span class="light-logo"><img width="104" height="38" src="{{ site.baseurl }}/images/logo/light.svg" alt="light frisco logo"></span>
+						<span class="dark-logo"><img width="104" height="38" src="{{ site.baseurl }}/images/logo/cervant-logo-svg.svg" alt="logo"></span>
+						<span class="light-logo"><img width="104" height="38" src="{{ site.baseurl }}/images/logo/cervant-logo-svg.svg" alt="logo"></span>
 					</a>
 				</div>
 				{% include navigation.html %}
@@ -66,7 +66,7 @@
 				</ul>
 				<p class="copyright">
 					<a href="https://cloudcannon.com/">
-						Template by CloudCannon
+						© Copyright Cervant, LLC
 					</a>
 				</p>
 			</div>
