--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
 					{% endfor %}
 				</ul>
 				<p class="copyright">
-					<a href="https://cloudcannon.com/">
+					<a href="https://www.cervant.io/">
 						© Copyright Cervant, LLC
 					</a>
 				</p>
